pkg/safeguards/lib/v2.1.0/container-enforce-pre-stop-hook/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureV1ContainerEnforcePreStopHook
metadata:
  name: v1-container-enforce-pre-stop-hook
spec:
  match:
    kinds:
      - apiGroups: ["", "apps"]
        kinds: ["Pod", "Deployment", "StatefulSet", "ReplicationController", "ReplicaSet"]
